test/good/loops/else02.px

until false do
    print 0
    break
else do
    print 1

until true do
    print 2
    break
else do
    print 3

until true do
    print 4
else do
    print 5
