test/bad/loops/else02.px

until true do
    b = 2
else do
    print b
